Tests/invalidity_tests/get_maze_input_tests/all_x.expout

Welcome to MineCraft MazeRunner!
--------------------------------

------------- MAIN MENU -------------
1) Generate Maze
2) Build Maze in MineCraft
3) Solve Maze
4) Show Team Information
5) Exit

Enter Menu item to continue:

------------- GENERATE MAZE -------------
1) Read Maze from terminal
2) Generate Random Maze
3) Back

Enter Menu item to continue:
Enter the basePoint of the maze:
Enter the length and width of the maze:
Length and width set to:
5 5
Enter the maze structure ('0' to exit):
Invalid maze, consists of all 'x'.

------------- GENERATE MAZE -------------
1) Read Maze from terminal
2) Generate Random Maze
3) Back

Enter Menu item to continue:
Returning to menu...

------------- MAIN MENU -------------
1) Generate Maze
2) Build Maze in MineCraft
3) Solve Maze
4) Show Team Information
5) Exit

Enter Menu item to continue:

Exiting...

The End!

